fix: make carousel buttons clickable with z-index

--- a/src/widgets/TimelineSlider/TimelineSlider.module.scss
+++ b/src/widgets/TimelineSlider/TimelineSlider.module.scss
@@ -4,6 +4,7 @@
 .carouselContainer,
 .circleButtonsContainer {
   @include flex-center;
+  z-index: 1;
   width: 530px;
   height: 530px;
   margin: 0 auto;
